--- a/static/scss/style.scss
+++ b/static/scss/style.scss
@@ -721,11 +721,12 @@ footer {
         flex-wrap: wrap;
         justify-content: center;
 
-        div {
+        a {
             padding: 10px 27px;
             background-color: #7b3c00;
             border-radius: 20px;
             font-family: $secondary-font;
+            font-size: 16px;
             font-weight: 700;
             cursor: pointer;
 
@@ -857,6 +858,10 @@ footer {
                     }
                     
                 }
+                
+                .error {
+                    outline: 1px solid red !important;
+                }
 
                 hr {
                     width: 100%;
@@ -934,6 +939,14 @@ footer {
                 p {
                     font-size: 13px;
                 }
+                
+                .warning {
+                    display: none;
+                    margin: 0 !important;
+                    gap: 0;
+                    color: red;
+                }
+                
             }
         }
 
@@ -941,38 +954,6 @@ footer {
 
 }
 
-
-/*
-@media (max-width: 750px) {
-    .navbar {
-        padding: 10px 35px;
-        .nav-container {
-            .nav-links, .resume-btn {
-                display: none;
-            }
-            .menu-icon {
-                display: block;
-            }
-        }
-    }
-}
-*/
-
-
-/*
-.button {
-  background: white;
-  color: $primary-color;
-  padding: 10px 20px;
-  border-radius: 5px;
-  font-weight: 400;
-  border: 2px solid white;
-  transition: 0.3s;
-
-  &:hover {
-    background: $primary-color;
-    color: white;
-    border-color: white;
+.notyf__toast {
+    font-family: Arial, sans-serif !important;
   }
-}
-*/
