--- a/static/css/style.css
+++ b/static/css/style.css
@@ -16,6 +16,16 @@ body {
   overflow-x: hidden;
 }
 
+#particles-js {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: 0;
+  background: transparent; /* Dark blue, change as needed */
+}
+
 h1, h2, h3 {
   margin: 0;
   font-weight: 700;
@@ -44,6 +54,15 @@ a:hover {
   opacity: 0.7;
 }
 
+.partial {
+  text-align: center;
+  font-size: 55px;
+  color: #984a00;
+  margin-top: 75px;
+  margin: 0;
+  margin-bottom: 50px;
+}
+
 .navbar {
   display: flex;
   position: fixed;
@@ -54,7 +73,7 @@ a:hover {
   align-items: center;
   background: #984a00;
   color: #ebebeb;
-  z-index: 1;
+  z-index: 3;
 }
 .navbar .nav-container {
   display: flex;
@@ -149,7 +168,7 @@ a:hover {
   background-color: #984a00;
   width: 100vw;
   transition: height 0.3s ease-in-out;
-  z-index: 1;
+  z-index: 3;
 }
 .responsive-menu .nav-links li {
   margin-bottom: 22px;
@@ -174,9 +193,34 @@ a:hover {
   flex-direction: column;
   align-items: center;
   gap: 2px;
+  /*
+  .socials-icon {
+      margin-top: 50px;
+      display: flex;
+      gap: 15px;
+      z-index: 2;
+
+      @include responsive("xs") {
+          margin-top: 40px;
+      }
+
+      i {
+          cursor: pointer;
+          font-size: 28px;
+          opacity: 50%;
+          @include hover-effect;
+
+          @include responsive("xs") {
+              font-size: 20px;
+          }
+
+      }
+  }
+  */
 }
 .home .profile-photo {
-  margin-top: 80px;
+  margin-top: 140px;
+  z-index: 2;
 }
 .home .profile-photo img {
   height: 220px;
@@ -188,6 +232,7 @@ a:hover {
   margin: 0;
   margin-top: 10px;
   font-size: 50px;
+  z-index: 2;
 }
 @media (max-width: 768px) {
   .home h1 {
@@ -211,6 +256,7 @@ a:hover {
   margin-top: 20px;
   display: flex;
   gap: 10px;
+  z-index: 2;
 }
 .home .button-group div {
   font-weight: 800;
@@ -243,27 +289,82 @@ a:hover {
   background-color: #171717;
 }
 .home .socials-icon {
-  margin-top: 50px;
-  display: flex;
-  gap: 15px;
+  display: inline-flex;
+  list-style: none;
+  font-family: Arial, sans-serif;
+  margin-top: 80px;
+  align-items: center;
+  justify-self: center;
+  padding: 0;
 }
-@media (max-width: 400px) {
-  .home .socials-icon {
-    margin-top: 40px;
-  }
-}
-.home .socials-icon i {
-  cursor: pointer;
+.home .socials-icon .icon {
+  position: relative;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
   font-size: 28px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
   opacity: 50%;
+  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+  transition: all 0.2s ease-in-out;
 }
-.home .socials-icon i:hover {
-  opacity: 0.7;
+.home .socials-icon .icon:hover {
+  opacity: 1;
 }
-@media (max-width: 400px) {
-  .home .socials-icon i {
-    font-size: 20px;
-  }
+.home .socials-icon .icon:hover .tooltip {
+  top: -45px;
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
+}
+.home .socials-icon .icon:hover span, .home .socials-icon .icon:hover .tooltip {
+  text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.1);
+}
+.home .socials-icon .tooltip {
+  position: absolute;
+  top: 0;
+  font-size: 14px;
+  background: #fff;
+  color: #fff;
+  padding: 5px 8px;
+  border-radius: 5px;
+  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
+  opacity: 0;
+  pointer-events: none;
+  transition: all 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
+.home .socials-icon .tooltip::before {
+  position: absolute;
+  content: "";
+  height: 8px;
+  width: 8px;
+  background: #fff;
+  bottom: -3px;
+  left: 50%;
+  transform: translate(-50%) rotate(45deg);
+  transition: all 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
+.home .socials-icon .github:hover,
+.home .socials-icon .github:hover .tooltip,
+.home .socials-icon .github:hover .tooltip::before {
+  background: #24292e;
+  color: #fff;
+}
+.home .socials-icon .linkedin:hover,
+.home .socials-icon .linkedin:hover .tooltip,
+.home .socials-icon .linkedin:hover .tooltip::before {
+  background: #0077B5;
+  color: #fff;
+}
+.home .socials-icon .facebook:hover,
+.home .socials-icon .facebook:hover .tooltip,
+.home .socials-icon .facebook:hover .tooltip::before {
+  background: #1877F2;
+  color: #fff;
 }
 
 .projects {
@@ -283,6 +384,7 @@ a:hover {
   padding: 8px 20px;
   background-color: #171717;
   border-radius: 20px;
+  z-index: 2;
 }
 .projects .projects-container {
   display: flex;
@@ -300,6 +402,7 @@ a:hover {
   background-color: #171717;
   padding: 25px;
   cursor: pointer;
+  z-index: 2;
 }
 @media (max-width: 992px) {
   .projects .project-box {
@@ -349,6 +452,7 @@ a:hover {
   align-items: center;
   gap: 2px;
   padding: 4px 35px;
+  padding-top: 100px;
 }
 .stacks h1 {
   font-size: 55px;
@@ -368,6 +472,7 @@ a:hover {
   flex-wrap: wrap;
   gap: 20px;
   margin-top: 50px;
+  z-index: 2;
 }
 .stacks .stacks-container .stack-box {
   display: flex;
@@ -379,6 +484,7 @@ a:hover {
   border: 1px solid #303030;
   padding: 15px;
   overflow: hidden;
+  background-color: #101010;
   transition: background 0.3s ease-in-out;
 }
 @media (max-width: 576px) {
@@ -425,6 +531,7 @@ a:hover {
   align-items: center;
   gap: 2px;
   padding: 4px 35px;
+  padding-top: 40px;
   height: 100vh;
 }
 @media (max-width: 768px) {
@@ -442,7 +549,8 @@ a:hover {
   width: 100%;
   max-width: 1100px;
   gap: 5vw;
-  margin-top: 30px;
+  margin-top: 50px;
+  z-index: 2;
 }
 @media (max-width: 768px) {
   .about .info-container {
@@ -528,6 +636,7 @@ a:hover {
   background-color: #171717;
   width: 100%;
   height: 200px;
+  margin-bottom: 200px;
 }
 @media (max-width: 768px) {
   .education-container {
@@ -557,6 +666,77 @@ a:hover {
   opacity: 60%;
 }
 
+.org-container {
+  position: relative;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2px;
+  padding: 4px 35px;
+  z-index: 2;
+  padding: 0 35px;
+}
+.org-container .content {
+  display: flex;
+  width: 100%;
+  max-width: 1100px;
+  background-color: #101010;
+  border-radius: 5px;
+  border: 1px solid #1a3f26;
+}
+@media (max-width: 768px) {
+  .org-container .content {
+    flex-direction: column;
+  }
+}
+.org-container .content .tpg-logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 30px 90px;
+}
+.org-container .content .tpg-logo img {
+  height: 120px;
+  width: 120px;
+  opacity: 80%;
+}
+.org-container .content .tpg-text {
+  display: flex;
+  justify-content: center;
+  align-items: start;
+  flex-direction: column;
+  padding: 20px 0;
+  padding-right: 20px;
+}
+@media (max-width: 768px) {
+  .org-container .content .tpg-text {
+    align-items: center;
+    padding: 20px;
+    text-align: center;
+  }
+}
+.org-container .content .tpg-text h2 {
+  font-size: 35px;
+  opacity: 60%;
+}
+@media (max-width: 576px) {
+  .org-container .content .tpg-text h2 {
+    font-size: 30px;
+  }
+}
+.org-container .content .tpg-text p {
+  margin-top: 2px;
+  font-style: italic;
+  opacity: 60%;
+}
+.org-container .content .tpg-text .position {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 17px;
+  opacity: 60%;
+}
+
 .what-i-do-container {
   width: 100%;
   display: flex;
@@ -564,6 +744,7 @@ a:hover {
   align-items: center;
   gap: 2px;
   padding: 4px 35px;
+  margin-top: 120px;
 }
 .what-i-do-container h1 {
   font-size: 55px;
@@ -577,6 +758,7 @@ a:hover {
   width: 100%;
   max-width: 1100px;
   gap: 20px;
+  z-index: 2;
 }
 .what-i-do-container .doings-container div {
   width: calc(50% - 10px);
@@ -603,7 +785,14 @@ a:hover {
   opacity: 60%;
 }
 
+svg {
+  position: relative;
+  z-index: 2;
+}
+
 footer {
+  position: relative;
+  z-index: 2;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -627,6 +816,7 @@ footer .links-container {
   gap: 10px;
   flex-wrap: wrap;
   justify-content: center;
+  z-index: 2;
 }
 footer .links-container a {
   padding: 10px 27px;
@@ -820,6 +1010,38 @@ footer .links-container a span {
 
 .notyf__toast {
   font-family: Arial, sans-serif !important;
+}
+
+.private-project {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2px;
+  padding: 4px 35px;
+  height: 100vh;
+  justify-content: center;
+}
+.private-project img {
+  height: 150px;
+  width: auto;
+}
+.private-project h2 {
+  margin-top: 10px;
+  font-family: Arial, sans-serif;
+}
+.private-project p {
+  text-align: center;
+}
+.private-project a {
+  background-color: white;
+  color: #101010;
+  padding: 10px 17px;
+  font-family: Arial, sans-serif;
+  font-weight: 600;
+  font-size: 16px;
+  margin-top: 20px;
+  border-radius: 20px;
 }
 
 /*# sourceMappingURL=style.css.map */
