--- a/portfolio_app/templates/inquire.html
+++ b/portfolio_app/templates/inquire.html
@@ -38,9 +38,9 @@
 
     <aside class="responsive-menu" id="responsive-menu">
         <ul class="nav-links">
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#stacks">Stacks</a></li>
-            <li><a href="#about">About</a></li>
+            <li><a href="{% url 'landing_page' %}#projects">Projects</a></li>
+            <li><a href="{% url 'landing_page' %}#stacks">Stacks</a></li>
+            <li><a href="{% url 'landing_page' %}#about">About</a></li>
             <li class="inquire-link"><a href="#"><i class="fa-solid fa-fire-flame-curved"></i>Inquire Now</a></li>
         </ul>
     </aside>
