--- a/static/scss/style.scss
+++ b/static/scss/style.scss
@@ -92,6 +92,10 @@ h1, h2, h3 {
     font-weight: 700;
 }
 
+section h1 {
+    text-align: center;
+}
+
 p, .sub-title {
   font-family: $secondary-font;
   font-weight: 300;
@@ -458,7 +462,7 @@ a {
 
     .project-box {
         
-        min-height: 400px;
+        min-height: 370px;
         background-color: pink;
         width: calc((100% - 40px) / 3);
         border-radius: 10px;
@@ -496,6 +500,7 @@ a {
         p {
             margin-top: 5px;
             opacity: 1;
+            font-size: 15px;
         }
 
         div {
