--- a/static/css/style.css
+++ b/static/css/style.css
@@ -31,6 +31,10 @@ h1, h2, h3 {
   font-weight: 700;
 }
 
+section h1 {
+  text-align: center;
+}
+
 p, .sub-title {
   font-family: Arial, sans-serif;
   font-weight: 300;
@@ -395,7 +399,7 @@ a:hover {
   gap: 20px;
 }
 .projects .project-box {
-  min-height: 400px;
+  min-height: 370px;
   background-color: pink;
   width: calc((100% - 40px) / 3);
   border-radius: 10px;
@@ -430,6 +434,7 @@ a:hover {
 .projects .project-box p {
   margin-top: 5px;
   opacity: 1;
+  font-size: 15px;
 }
 .projects .project-box div {
   display: flex;
